--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+lightgbm==4.3.0
 matplotlib==3.8.2
-numpy==1.26.3
-pandas==2.2.0
+numpy==1.26.4
+pandas==2.2.2
+pingouin==0.5.4
+plotly==5.18.0
 pytest==8.0.0
 scikit_learn==1.4.0
-scipy==1.12.0
+scipy==1.13.0
 seaborn==0.13.2
 setuptools==68.2.2
+tabulate==0.9.0
