--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.pyc
 
 # Ignore everything in these directories
+models/dl_runs/*
 models/model_summaries/*
 models/trained_models/*
 data/external/*
